@@ -1,3 +1,8 @@
+2003-12-06  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/ia64/pt-initfini.c: Use .init_array
+	instead of .init.  Patch by David Mosberger.
+
 2003-11-30  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sysdeps/pthread/configure.in: Remove broken declaration in C
